Add SonarCloud project key and organization placeholders to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,3 +42,5 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: https://sonarcloud.io
+          SONAR_PROJECT_KEY: adrien-fort_cinema-booking-system
+          SONAR_ORGANIZATION: adrien-fort
